--- a/index.html
+++ b/index.html
@@ -7,6 +7,71 @@
 </head>
 
 <body>
+    <header>
+        <h1 class="headerLogo">Header Logo</h1>
+        <ul class="headerNavigationBar">
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </header>
 
+    <div class="firstSection">
+        <div class="firstSectionContainer">
+            <div class="firstSectionText">
+                <h1 class="catchLine">This website is awesome</h1>
+                <p class="firstSectionDescription">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="signUpButton">Sign up</button>
+            </div>
+            <div class="firstSectionImageContainer">
+                <img class="firstSectionImage" src="" alt="">
+            </div>
+        </div>
+        
+    </div>
+
+    <div class="secondSection">
+        <div class="sectionTwoContainer">
+            <h1 class="secondSectionTitle">Some random information</h1>
+            <div class="itemsContainer">
+                <div class="item">
+                    <div class="itemIllustration"></div>
+                    <div class="itemSubtext"></div>
+                </div>
+                <div class="item">
+                    <div class="itemIllustration"></div>
+                    <div class="itemSubtext"></div>
+                </div>
+                <div class="item">
+                    <div class="itemIllustration"></div>
+                    <div class="itemSubtext"></div>
+                </div>
+                <div class="item">
+                    <div class="itemIllustration"></div>
+                    <div class="itemSubtext"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="thirdSection">
+        <div class="quoteContainer">
+            <p class="quoteText">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people witll actually read it. Who knows ? All I know is that it looks nice.</p>
+            <p class="quoteAuthor"><b>-Thor, God of Thunder</b></p>
+        </div>
+    </div>
+
+    <div class="sectionFour">
+        <div class="callToActionContainer">
+            <h2 class="callToActionTitle">Call to action! It's time!</h2>
+            <p class="callToActionSubtext">Sign up for our product by clicking that button right over there!</p>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footerContainer">
+            <p class="footerText">Copyright © The Odin Porject 2021</p>
+        </div>
+    </footer>
 </body>
 </html>
