Implement header css style minor html twist

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 
 <body>
     <header>
-        <h1 class="headerLogo">Header Logo</h1>
-        <ul class="headerNavigationBar">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+        <div class="headerContainer">
+            <h1 class="headerLogo">Header Logo</h1>
+            <ul class="headerNavigationBar">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+
+        
     </header>
 
     <div class="firstSection">
