Implent section one style and add illustration image

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <div class="firstSection">
         <div class="firstSectionContainer">
             <div class="firstSectionText">
-                <h1 class="catchLine">This website is awesome</h1>
-                <p class="firstSectionDescription">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <h1 class="catchLine">This website is <br/>awesome</h1>
+                <p class="firstSectionDescription">This website has some subtext that goes here under the<br/>main title. It's a smaller font and the color is lower<br/>contrast</p>
                 <button class="signUpButton">Sign up</button>
             </div>
             <div class="firstSectionImageContainer">
-                <img class="firstSectionImage" src="" alt="">
+                <img class="firstSectionImage" src="src/LadyJusticeImage.jpg" alt="Lady Justice holding the balance.">
             </div>
         </div>
         
