Add style for section two, three, four and footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
     </header>
 
-    <div class="firstSection">
+    <div class="firstSection section">
         <div class="firstSectionContainer">
             <div class="firstSectionText">
                 <h1 class="catchLine">This website is <br/>awesome</h1>
@@ -35,48 +35,49 @@
         
     </div>
 
-    <div class="secondSection">
-        <div class="sectionTwoContainer">
-            <h1 class="secondSectionTitle">Some random information</h1>
+    <div class="secondSection section">
+        <div class="secondSectionContainer">
+            <h1 class="secondSectionTitle">Some random information.</h1>
             <div class="itemsContainer">
                 <div class="item">
                     <div class="itemIllustration"></div>
-                    <div class="itemSubtext"></div>
+                    <div class="itemSubtext">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="item">
                     <div class="itemIllustration"></div>
-                    <div class="itemSubtext"></div>
+                    <div class="itemSubtext">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="item">
                     <div class="itemIllustration"></div>
-                    <div class="itemSubtext"></div>
+                    <div class="itemSubtext">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="item">
                     <div class="itemIllustration"></div>
-                    <div class="itemSubtext"></div>
+                    <div class="itemSubtext">this is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="thirdSection">
+    <div class="thirdSection section">
         <div class="quoteContainer">
             <p class="quoteText">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people witll actually read it. Who knows ? All I know is that it looks nice.</p>
             <p class="quoteAuthor"><b>-Thor, God of Thunder</b></p>
         </div>
     </div>
 
-    <div class="sectionFour">
+    <div class="sectionFour section">
         <div class="callToActionContainer">
-            <h2 class="callToActionTitle">Call to action! It's time!</h2>
-            <p class="callToActionSubtext">Sign up for our product by clicking that button right over there!</p>
+            <div class="callToActionTextContainer">
+                <h2 class="callToActionTitle">Call to action! It's time!</h2>
+                <p class="callToActionSubtext">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="callToActionButton">Sign up</button>
         </div>
     </div>
 
     <footer>
-        <div class="footerContainer">
-            <p class="footerText">Copyright © The Odin Porject 2021</p>
-        </div>
+            <p class="footerText">Copyright © The Odin Project 2021</p>
     </footer>
 </body>
 </html>
